deploy: deb6fe2d9158a7e68773042bc3645c8899d9fe8e

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="card-body">
           <h2>
             
-            <a class="text-reset" href=""><span class="card-title text-reset"> Resources</span></a>
+            <a class="text-reset" href=""><span class="card-title text-reset"> Related Tutorials</span></a>
           </h2>
           <div class="card-text">
             
